[package]
name = "omegasort"
version = "0.1.3"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "The last text sorting tool you'll ever need"
repository = "https://github.com/houseabsolute/omegasort"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
dateparser = "0.2.0"
fern = { version = "0.6.2", features = ["colored"] }
icu = { version = "1.3.2", features = ["sync"] }
ipnet = "2.8.0"
lazy-regex = "3.0.2"
log = "0.4.20"
rayon = "1.8.0"
tempfile = "3.8.0"
termimad = "0.25.5"
thiserror = "1.0.50"
typed-path = "0.6.0"

[dev-dependencies]
tempfile = "3.8.0"
test-case = "3.2.1"

# workaround for https://github.com/cross-rs/cross/issues/1345
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "mkdir -p /tmp/netbsd",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.2/amd64/binary/sets/base.tar.xz -O",
    "tar -C /tmp/netbsd -xJf base.tar.xz",
    "cp /tmp/netbsd/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf /tmp/netbsd",
]
