[package]
name = "omegasort"
version = "0.1.3"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "The last text sorting tool you'll ever need"
repository = "https://github.com/houseabsolute/omegasort"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
dateparser = "0.2.1"
fern = { version = "0.7.1", features = ["colored"] }
icu = { version = "1.5.0", features = ["sync"] }
ipnet = "2.10.1"
lazy-regex = "3.3.0"
log = "0.4.22"
rayon = "1.10.0"
tempfile = "3.14.0"
termimad = "0.31.1"
thiserror = "2.0.9"
typed-path = "0.10.0"

[dev-dependencies]
tempfile = "3.14.0"
test-case = "3.3.1"
test-log = "0.2.16"

# workaround for https://github.com/cross-rs/cross/issues/1345
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "mkdir -p /tmp/netbsd",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.2/amd64/binary/sets/base.tar.xz -O",
    "tar -C /tmp/netbsd -xJf base.tar.xz",
    "cp /tmp/netbsd/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf /tmp/netbsd",
]

[profile.release]
codegen-units = 1
lto = true
strip = true
